--- a/README.Rmd
+++ b/README.Rmd
@@ -28,5 +28,5 @@ devtools::install_github("itamarcaspi/psymonitor")
 ## References
   * Phillips, P. C. B., Shi, S., & Yu, J. (2015a).  Testing for multiple bubbles: Historical episodes of exuberance and collapse in the S&P 500. *International Economic Review*, 56(4), 1034--1078.
   * Phillips, P. C. B., Shi, S., & Yu, J. (2015b). Testing for multiple bubbles: Limit Theory for Real-Time Detectors. *International Economic Review*, 56(4), 1079--1134.
-  * Phillips, P. C. B., & Shi, S.(2017). Detecting financial collaps and ballooning sovereign risk. Cowels Foundation Discussion Paper No. 2110.
+  * Phillips, P. C. B., & Shi, S.(2017). Detecting financial collapse and ballooning sovereign risk. Cowles Foundation Discussion Paper No. 2110.
   
