added RcppEigen dependency

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ The *psymonitor* package provides an R implementation of the popular real-time m
 ## Installation
 
 You can install the **development** version from
-[Github](https://github.com/itamarcaspi/psymonitor/)
+[GitHub](https://github.com/itamarcaspi/psymonitor/)
 
 ```r
 # install.packages("devtools")
