--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,48 @@ devtools::install_github("itamarcaspi/psymonitor")
 
 ## Example
 
+For the illustration purposes we will use data on the credit risk in the European sovereign sector, that is proxied by an index constructed as a GDP weighted 10-year government bond yield of the GIIPS (Spain, Ireland, Italy, Greece, and Portugal) countries, and comes with the 'psymonitor' package.
+
+Let’s walk through some basics. First load packages and get some data.
+
+```{r data, include=TRUE, message=FALSE, warning=FALSE}
+library(psymonitor)
+
+data(spread)
+head(spread)
+```
+
+Next, estimate the psy test statistic using PSY() and its corresponding bootstrap-based critical values using wmboot().
+
+```{r test, include=TRUE, message=FALSE, warning=FALSE}
+y        <- spread$value
+obs      <- length(y)
+swindow0 <- floor(obs * (0.01 + 1.8 / sqrt(obs)))
+Tb       <- 24 + swindow0 - 1
+dim      <- obs - swindow0 + 1
+
+bsadf          <- PSY(y)
+quantilesBsadf <- wmboot(y, Tb = Tb, nboot = 99, nCores = 2) #Note that the number of cores is arbitrarily set to 2.
+
+```
+
+Next, identify crisis periods, defined as periods where the test statistic is above its corresponding critical value, using the locate() function.
+
+```{r dateStamp, include=TRUE, message=FALSE, warning=FALSE}
+monitorDates <- spread$date[swindow0:obs]
+quantile95   <- quantilesBsadf %*% matrix(1, nrow = 1, ncol = dim)
+ind95        <- (bsadf > t(quantile95[2, ])) * 1
+periods      <- locate(ind95, monitorDates)
+```
+
+Finally, print a table that holds the identified crisis periods with the help of the disp() function.
+
+```{r printResults, include=TRUE, message=FALSE, warning=FALSE, results = 'asis'}
+crisisDates <- disp(periods, obs)
+print(crisisDates)
+```
+
+---
 
 ## References
   * Phillips, P. C. B., & Shi, S.(2017). Detecting financial collapse and ballooning sovereign risk. Cowles Foundation Discussion Paper No. 2110.
