adjustet for CRAN submission

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ You can install the **development** version from
 devtools::install_github("itamarcaspi/psymonitor")
 ```
 
-## Example
+## Usage
 
 For the illustration purposes we will use data on the credit risk in the European sovereign sector, that is proxied by an index constructed as a GDP weighted 10-year government bond yield of the GIIPS (Spain, Ireland, Italy, Greece, and Portugal) countries, and comes with the 'psymonitor' package.
 
@@ -83,7 +83,7 @@ print(crisisDates)
 
 ---
 
-Pleas cheack the packages' articles for an elaborated analysis of the [spreads data](https://itamarcaspi.github.io/psymonitor/articles/illustrationSNP.html), as well as a demonstration using data on the [S&P 500 price-to-dividend ratio](https://itamarcaspi.github.io/psymonitor/articles/illustrationBONDS.html).
+Pleas cheack the packages' articles for an elaborated analysis of the [spreads data](https://itamarcaspi.github.io/psymonitor/articles/illustrationBONDS.html), as well as a demonstration using data on the [S&P 500 price-to-dividend ratio](https://itamarcaspi.github.io/psymonitor/articles/illustrationSNP.html).
 
 ---
 
