changed wmboot->cvPSYwmboot cvPSY -> cvPSYmc

--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ data(spread)
 
 ```
 
-Next, estimate the PSY test statistic using `PSY()` and its corresponding bootstrap-based critical values using `wmboot()`.
+Next, estimate the PSY test statistic using `PSY()` and its corresponding bootstrap-based critical values using `cvPSYwmboot()`.
 
 ```{r test}
 y        <- spread$value
